# open-data-day-2024

./: .env-exemplo  LICENSE  README.md  coleta_tratamento_dados.ipynb  config.py  install_codespace_dep.sh  install_codespace_depen.sh  pyproject.toml  requirements.txt  streamlit_app.py
data/docs/: APRESENTAÇÃO ODD 2024.pptx  ODD - BPMN Diagram.bpmn
data/processed/: summary_recursos_disponiveis.csv  summary_recursos_disponiveis.pkl
open_data_day_2024/: web_page.py
